@@ -112,7 +112,7 @@ endif
 $(GO4GUI3_DS): $(GO4GUI3_H) $(GO4GUI3_LINKDEF)
 	@$(ROOTCINTGO4) $(GO4GUI3_H) $(GO4GUI3_LINKDEF)
 
-$(GO4GUI3_DIR)/$(GO4GUI3_QTMAKE): $(GO4GUI3_DIR)/$(GO4GUI3_QTPRO) $(GO4GUI3_FORMS)
+$(GO4GUI3_DIR)/$(GO4GUI3_QTMAKE): $(GO4GUI3_DIR)/$(GO4GUI3_QTPRO) $(GO4GUI3_FORMS) $(GO4GUI3_DS)
 	@echo "Generating $(GO4GUI3_QTMAKE)"
 	cd $(GO4GUI3_DIR); $(QMAKE) $(GO4GUI3_QTPRO) -o $(GO4GUI3_QTMAKE) $(QMAKEOPTFLAG) $(QMAKEFLAGS) $(QMAKELIBFLAGS) "LIBS+=$(LIBS_GUISET)" $(GO4GUI3_QMAKEFLAGS)
 
